# LMM-large-mind-model

./: .env.example  .gitignore  LICENSE  README.md  SUMMARY.md  build.bat  chat.py  create_project_layout.bat  example.py  get_codebase.py  llm_module.py  main.py  neuralchild-run  project_developmentplan.md  project_layout.txt  project_structure.md  project_vision.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_lmm.bat  run_tests.py  sample_config.json  setup.py  simple_app.py  test.py  test_audio.py  test_audio_path.py  test_audio_system.py  test_tts_and_play.py  tts_module.py
LMM_project/: main.py  requirements.txt
NeuralChild/: __init__.py  app.py  config.py  dashboard.py  implementation_plan.md  llm_module.py  main.py  mother.py  neural_child.py  system.py
agendev/: README.md  app.py  autonomous.py  requirements.txt  setup.py
ai_dev_system/: llm_module.py  main.py
dashboard/: __init__.py  app.py
examples/: basic_usage.py  complete_demo.py  custom_component.py
llm-code-generator/: app.py  config.py  pyproject.toml
llm_fullstack_generator/: app.py
lmm/: __init__.py  main.py  requirements.txt  test_nlp.py  test_thought_integration.py
lmm_project/: README.md  __init__.py  app.py  config.yml  main.py  requirements.txt
mother/: __init__.py  mother.py
neural_child/: __init__.py
neuralchild/: __init__.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_consciousness.py  test_development.py  test_development_progression.py  test_embedding_api.py  test_emotion.py  test_integration.py  test_language.py  (+5 more)
(+522 files in other folders)
