[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychological_mind"
version = "0.1.0"
description = "A psychological neural network system simulating human cognitive processes"
readme = "README.md"
requires-python = ">=3.9.13"
license = { text = "MIT" }
authors = [{ name = "RenDev" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=psychological_mind"

[project.dependencies]
torch = ">=2.0.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
transformers = ">=4.30.0"
tensorboard = ">=2.13.0"
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"
tqdm = ">=4.65.0"
